# CCM_THETA_STAR

./: README.md  navi_pick_main.py
config/general/: offline_mipt.yaml
controller_ws/src/ros_controller_mobile_robot/: CMakeLists.txt  package.xml
controller_ws/src/ros_controller_mobile_robot_action_free/: CMakeLists.txt  README.md  package.xml
controller_ws/src/ros_controller_mobile_robot_action_free/config/: config_real.yaml
controller_ws/src/ros_controller_mobile_robot_action_free/launch/: control_action.launch
controller_ws/src/ros_controller_mobile_robot_action_free/src/: main_action.cpp
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/mpc_planner/: mpc_planner
devel/lib/pkgconfig/: mpc_planner.pc
src/MPC_Local_Planner/: CMakeLists.txt  package.xml
src/MPC_Local_Planner/config_params/: ros_parameters.yaml
src/MPC_Local_Planner/include/: ROS_Node.h  lib.h
src/MPC_Local_Planner/scripts/: acados_solver.json
src/MPC_Local_Planner/scripts/c_generated_code/: Makefile  acados_solver_robot_model.c  acados_solver_robot_model.h  main_robot_model.c
src/MPC_Local_Planner/scripts/c_generated_code/robot_model_cost/: robot_model_cost_y_0_fun.c  robot_model_cost_y_0_fun_jac_ut_xt.c  robot_model_cost_y_0_hess.c  robot_model_cost_y_e_fun.c  robot_model_cost_y_e_fun_jac_ut_xt.c  robot_model_cost_y_e_hess.c  robot_model_cost_y_fun.c  robot_model_cost_y_fun_jac_ut_xt.c  robot_model_cost_y_hess.c
src/MPC_Local_Planner/scripts/c_generated_code/robot_model_model/: robot_model_expl_ode_fun.c  robot_model_expl_vde_adj.c  robot_model_expl_vde_forw.c
src/MPC_Local_Planner/src/: MPC_Planner.cpp  main.cpp
src/ThetaStarROS/: CMakeLists.txt
src/actions/: controller.py  wheel.py
src/isaac-utils/: README.md  pointcloud_fusion.py
src/sensors/: cameras.py  lidar.py  tf.py
(+14 files in other folders)
