<?xml version="1.0"?>
<package format="2">
  <name>mpc_planner</name>
  <version>0.0.1</version>
  <description>ROS node for trajectory optimization using Acados solver</description>

  <maintainer email="alhaddad.muh@gmail.com">Muhammad Alhaddad</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>simulation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>simulation</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


</package>
